[build-system]
requires = ["hatchling", "numpy", "pandas", "uncertainties"]
build-backend = "hatchling.build_backend"

[project]
name = "pround"
version = "0.0.1"
authors = [
  { name="Cedric Breuning", email="contact@ccbreuning.de" },
]
description = "Create tables (LaTeX and Excel) of values with uncertainties, properly rounded."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ccbreuning/pround"
"Bug Tracker" = "https://github.com/ccbreuning/pround/issues"