[build-system]
requires = ["hatchling", "numpy", "pandas", "uncertainties"]
build-backend = "hatchling.build"

[project]
name = "pround"
version = "0.0.1"
authors = [
  { name="Cedric Breuning", email="author@example.com" },
]
description = "Create latex and excel tables with values and uncertainties properly rounded."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ccbreuning/pround"
"Bug Tracker" = "https://github.com/ccbreuning/pround/issues"